fixed song lis ui

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <button class="control-btn" onclick="nextSong()">Next &#9654;</button>
       </div>
 
-      <!-- Song List -->
-      <ul class="song-list" id="songList"></ul>
+      <div class="songs-container">
+        <!-- Song List -->
+        <ul class="song-list" id="songList"></ul>
+      </div>
 
     <script src="./js/script.js"></script>
   </body>
