Fixed button css

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <button class="control-btn" onclick="playAudio()">Play</button>
         <button class="control-btn" onclick="pauseAudio()">Pause</button>
 
-        <button class="control-btn" onclick="prevSong()">&#9664; Prev</button>
-        <button class="control-btn" onclick="nextSong()">Next &#9654;</button>
+        <button class="control-btn" onclick="prevSong()">Prev</button>
+        <button class="control-btn" onclick="nextSong()">Next</button>
       </div>
 
       <div class="songs-container">
