added howler play, added Media session api support

--- a/index copy.html
+++ b/index copy.html
@@ -15,10 +15,10 @@
 
       <!-- Control Buttons -->
       <div class="controls">
-        <button class="control-btn" onclick="prevSong()">&#9664;</button>
-        <button class="control-btn" onclick="playAudio()">&#9654;</button>
-        <button class="control-btn" onclick="pauseAudio()">&#10074;&#10074;</button>
-        <button class="control-btn" onclick="nextSong()">&#9654;&#9654;</button>
+        <button class="control-btn" onclick="playAudio()">Play</button>
+        <button class="control-btn" onclick="pauseAudio()">Pause</button>
+        <button class="control-btn" onclick="prevSong()">Prev</button>
+        <button class="control-btn" onclick="nextSong()">Next</button>
       </div>
 
       <div class="songs-container">
