Added support the song category

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div class="player-container">
+      <!-- Category Buttons -->
+      <div class="category-buttons">
+        <button class="category-btn" onclick="setSource('OneMusic')">New</button>
+        <button class="category-btn" onclick="setSource('OldMusic')">Old</button>
+      </div>
+
       <!-- Audio Player -->
       <audio id="audioPlayer" controls preload="auto">
         Your browser does not support the audio element.
