updated code to load bhakti songs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="category-buttons">
         <button class="category-btn" onclick="setSource('OneMusic')">New</button>
         <button class="category-btn" onclick="setSource('OldMusic')">Old</button>
+        <button class="category-btn" onclick="setSource('bhakti')">Bhakti</button>
       </div>
 
       <!-- Audio Player -->
