--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
         <button class="category-btn" onclick="setSource('bhakti')">Bhakti</button>
       </div>
 
-      <!-- Audio Player -->
-      <audio id="audioPlayer" controls preload="auto">
-        Your browser does not support the audio element.
-      </audio>
-
       <!-- Control Buttons -->
       <div class="controls">
-        <button class="control-btn" onclick="prevSong()">&#9664;</button>
-        <button class="control-btn" onclick="playAudio()">&#9654;</button>
-        <button class="control-btn" onclick="pauseAudio()">&#10074;&#10074;</button>
+        <button class="control-btn" onclick="prevSong()">&#9664;&#9664;</button>
+        <button id="playPauseButton" class="control-btn" onclick="togglePlayPause()">&#9654;</button>
         <button class="control-btn" onclick="nextSong()">&#9654;&#9654;</button>
       </div>
+
+      <!-- Seek Bar and Time Display -->
+      <div class="seek-container">
+        <span id="current-time">00:00</span>
+        <input type="range" id="seek-bar" value="0" step="0.1" min="0" max="100" onclick="seekAudio(event)" />
+        <span id="total-time">00:00</span>
+      </div>
+
 
       <div class="songs-container">
         <!-- Song List -->
         <ul class="song-list" id="songList"></ul>
       </div>
+
+      <!-- "Enable Dolby" button -->
+      <div class="dolby-toggle">
+        <button class="toggle-dolby-btn" onclick="toggleDolby()">Enable Dolby</button>
+      </div>
+
     </div>
 
+    <!-- Howler.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
+    
+    <!-- Your custom script -->
     <script src="./js/script.js"></script>
   </body>
 </html>
